2021.05.09/Lists_HW
>>> squares = [1, 4, 9, 16, 25]
>>> squares
[1, 4, 9, 16, 25]
>>> squares[0]
1
>>> squares[4:]
[25]
>>> squares[:4]
[1, 4, 9, 16]
>>> squares [:]
[1, 4, 9, 16, 25]
>>> squares + [36, 49, 64, 81, 100]
[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]
>>> cubes = [1, 8, 27, 65, 125]
>>> 4 ** 3
64
>>> cubes [3] = 64
>>> cubes
[1, 8, 27, 64, 125]
>>> cubes.append(216)
>>> cubes.append(7**3)
>>> cubes
[1, 8, 27, 64, 125, 216, 343]
>>> letters = [ 'a', 'b', 'c', 'd', 'e','f', 'g']
>>> letters
['a', 'b', 'c', 'd', 'e', 'f', 'g']
>>> letters [2:5} = ['C', 'D', 'E']
  File "<stdin>", line 1
    letters [2:5} = ['C', 'D', 'E']
                ^
SyntaxError: closing parenthesis '}' does not match opening parenthesis '['
>>> letters [2:5] = ['C', 'D', 'F']
>>> letters
['a', 'b', 'C', 'D', 'F', 'f', 'g']
>>> letters [2:5] = []
>>> letters
['a', 'b', 'f', 'g']
>>> letters[:] =  []
>>> letters
[]
>>> len(letterss)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'letterss' is not defined
>>> len(letters)
0
>>> a = ['a', 'b', 'c']
>>> n = [1, 2, 3]
>>> x = [a, n]
>>> x
[['a', 'b', 'c'], [1, 2, 3]]
>>> x[0]
['a', 'b', 'c']
>>> x[0][1]
'b'
>>>